Add WebSocket-based file proxy for cross-network file access
- Add WebSocket tunneling for file operations (list, download)
- Add pending requests tracking system for async request/response correlation
- Add HTTP API endpoints: /api/ftp/browse and /api/ftp/download
- Add chunked file transfer (64KB chunks, base64 encoded)
- Keep all existing screen mirroring functionality intact
- Add Express and basic-ftp dependencies
- Add .gitignore to exclude node_modules

This enables file browsing and download even when devices are on different networks (mobile data vs WiFi), by tunneling file operations through the WebSocket connection.

All WebRTC signaling for screen mirroring continues to work normally.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dev": "node server.js"
   },
   "dependencies": {
+    "basic-ftp": "^5.1.0",
+    "express": "^5.2.1",
     "socket.io": "^4.6.0",
     "uuid": "^9.0.0"
   },
